--- a/Integration/ABAP/01. CDS View 데이터 추출-1.md
+++ b/Integration/ABAP/01. CDS View 데이터 추출-1.md
@@ -1,1 +1,5 @@
 # CDS View 데이터 추출
+
+SAP Data Intelligence는 ABAP CDS View 데이터를 추출하기 위한 표준 CDS View Operator를 제공합니다. 이 때, S/4HANA OP 환경에서는 1909 버전 이상 과 S/4HANA Cloud 환경에선느 2002 버전 이상일 때 사용이 가능합니다.
+만약, S/4HANA OP 1909 버전 이하일 때는 Custom Operator를 제작하여 사용이 가능합니다.
+
