Update 01. CDS View 데이터 추출-1.md

--- a/Integration/ABAP/01. CDS View 데이터 추출-1.md
+++ b/Integration/ABAP/01. CDS View 데이터 추출-1.md
@@ -1,5 +1,24 @@
 # CDS View 데이터 추출
 
-SAP Data Intelligence는 ABAP CDS View 데이터를 추출하기 위한 표준 CDS View Operator를 제공합니다. 이 때, S/4HANA OP 환경에서는 1909 버전 이상 과 S/4HANA Cloud 환경에선느 2002 버전 이상일 때 사용이 가능합니다.
+SAP Data Intelligence는 ABAP 기반 시스템의 데이터를 외부로 추출하는 기능을 제공합니다.<br>
+표준 ABAP CDS View Operator를 사용하여 데이터 추출을 지원합니다.<br>
+하지만, S/4HANA 버전에 따라 
+데이터를 추출하기 위한 표준 CDS View Operator를 제공합니다. 이 때, S/4HANA OP 환경에서는 1909 버전 이상 과 S/4HANA Cloud 환경에선느 2002 버전 이상일 때 사용이 가능합니다.
 만약, S/4HANA OP 1909 버전 이하일 때는 Custom Operator를 제작하여 사용이 가능합니다.
+
+
+## 표준 ABAP Operator
+S/4HANA OP 버전 >= 1909 또는 S/4HANA Cloud 버전 >= 2002 일 때 Custom Operator를 제작하여 ABAP CDS View 데이터를 추출합니다.<br>
+
+
+## Custom Operator
+S/4HANA OP 버전 < 1909 또는 S/4HANA Cloud 버전 < 2002 일 때 Custom Operator를 제작하여 ABAP CDS View 데이터를 추출합니다.<br>
+
+### 1. CDS View 생성
+
+
+### 2. RFC에서 CDS View 호출
+
+
+### 3. Custom Operator에서 RFC 호출
 
