Update 01. CDS View 데이터 추출-1.md

--- a/Integration/ABAP/01. CDS View 데이터 추출-1.md
+++ b/Integration/ABAP/01. CDS View 데이터 추출-1.md
@@ -16,9 +16,34 @@ S/4HANA OP 버전 < 1909 또는 S/4HANA Cloud 버전 < 2002 일 때 Custom Opera
 
 ### 1. CDS View 생성
 
+    @AbapCatalog.sqlViewName: 'ZKW_SVBP01'
+    @AbapCatalog.compiler.compareFilter: true
+    @AbapCatalog.preserveKey: true
+    @AccessControl.authorizationCheck: #CHECK
+    @EndUserText.label: 'business partner - kwater cds'
+    @Analytics.dataExtraction.delta.changeDataCapture.automatic: true
+    @Analytics.dataExtraction.enabled: true
+    define view ZKW_CDSBP01 as select from zbp01 {
+    key    customer_id,
+        loan_id,
+        gender,
+        married,
+        dependents,
+        education,
+        self_employed,
+        credit_history
+    }
 
 ### 2. RFC에서 CDS View 호출
 
+![](Images/abap_rfc.png)<br>
+![](Images/abap_rfc2.png)<br>
+![](Images/abap_rfc3.png)<br>
 
 ### 3. Custom Operator에서 RFC 호출
+
+![](Images/di_rfc1.png)<br>
+![](Images/di=_rfc2.png)<br>
+
+
 
