Update 01. CDS View 데이터 추출-1.md

--- a/Integration/ABAP/01. CDS View 데이터 추출-1.md
+++ b/Integration/ABAP/01. CDS View 데이터 추출-1.md
@@ -43,7 +43,7 @@ S/4HANA OP 버전 < 1909 또는 S/4HANA Cloud 버전 < 2002 일 때 Custom Opera
 ### 3. Custom Operator에서 RFC 호출
 
 ![](Images/di_rfc1.png)<br>
-![](Images/di=_rfc2.png)<br>
+![](Images/di_rfc2.png)<br>
 
 
 
