Update 01. CDS View 데이터 추출-1.md

--- a/Integration/ABAP/01. CDS View 데이터 추출-1.md
+++ b/Integration/ABAP/01. CDS View 데이터 추출-1.md
@@ -47,6 +47,35 @@ Data Intelligence의 Modeler에서 Pipeline를 생성하고 실행합니다.<br>
 이 때, Python3 Operator를 사용하여 Custom Operator를 생성합니다.<br>
 
 ![](Images/di_rfc1.png)<br>
+
+    def on_input(data):
+        from pyrfc import Connection, ABAPApplicationError, ABAPRuntimeError, LogonError, CommunicationError
+        from configparser import ConfigParser
+        from pprint import PrettyPrinter
+
+        ASHOST='xxx.xxx.xxx.xxx'
+        CLIENT='100'
+        SYSNR='40'
+        USER='UserID'
+        PASSWD='Password'
+        conn = Connection(ashost=ASHOST, sysnr=SYSNR, client=CLIENT, user=USER, passwd=PASSWD)
+
+        options = [{ 'TEXT': "FCURR = 'USD'"}]
+        result = conn.call('RFC_READ_TABLE', \
+                            QUERY_TABLE = 'TCURR', \
+                            OPTIONS = options)
+        # result : Dictionary Data Type
+
+        out = str(result['DATA']) # List to String
+
+        #import pandas as pd
+        #df = pd.DataFrame(result['DATA']) # List to DataFrmae
+
+        conn.close()
+        api.send("output", out)
+
+    api.set_port_callback("input", on_input)
+
 ![](Images/di_rfc2.png)<br>
 
 감사합니다.
